Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>BIZ-79917</description>
    <formula>SBQQ__SegmentQuantity__c *  Customer_Sale_Price_Per_Month__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>