Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/ACV_Change__c.field-meta.xml
<CustomField>
    <fullName>ACV_Change__c</fullName>
    <label>ACV Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>