Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Amendment_Type__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Type__c</fullName>
    <description>Classifies the amendment based on subscription quantity sign: Positive (increase or new addition), Negative (decrease), or Neutral (zero).</description>
    <formula>IF(SBQQ__Quantity__c &gt; 0, &quot;Positive&quot;,
   IF(SBQQ__Quantity__c &lt; 0, &quot;Negative&quot;, &quot;Neutral&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amendment Type</label>
    <type>Text</type>
</CustomField>