Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Consolidated_Quote__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Quote__c</fullName>
    <description>Formula field for consolidated quote on subscription from Contract
Created as part of BIZ-51592</description>
    <formula>CASESAFEID(SBQQ__Contract__r.Consolidated_Quote__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consolidated Quote</label>
    <type>Text</type>
</CustomField>