Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Customer_Sale_Price_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sale_Price_Per_Month__c</fullName>
    <description>BIZ-67817 - Twin field from QL</description>
    <label>Customer_Sale_Price_Per_Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>