Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/DLI_Id__c.field-meta.xml
<CustomField>
    <fullName>DLI_Id__c</fullName>
    <description>External Reference for this Entitlement record -- represents the parent entitlement ID.</description>
    <label>DLI Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>