Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/DLI_Price__c.field-meta.xml
<CustomField>
    <fullName>DLI_Price__c</fullName>
    <description>Parent price of the bundle.</description>
    <label>DLI Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>