Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/DLIP_Id__c.field-meta.xml
<CustomField>
    <fullName>DLIP_Id__c</fullName>
    <description>External Reference for this Entitlement record -- represents the child entitlement ID.</description>
    <label>DLIP Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>