Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Id__c</fullName>
    <description>Link to Entitlement record in OP4I.</description>
    <label>Entitlement Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>