Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Entitlement_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Quantity__c</fullName>
    <formula>IF(ISBLANK( SBQQ__RevisedSubscription__c ),  SBQQ__SegmentQuantity__c ,  SBQQ__Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>