Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Last_Segment_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Last_Segment_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Segment Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Subscriptions (Last Segment Subscription)</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>