Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/One_Time_Credit__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Credit__c</fullName>
    <description>One-time credit amount carried over from the originating Quote Line; used to preserve the credit across amendments and renewals (BIZ-81462).</description>
    <label>One Time Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>