Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/OP4I_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Contract_Number__c</fullName>
    <label>OP4I Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>