Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/OP4I_Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Entitlement_Id__c</fullName>
    <label>OP4I Entitlement Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>