Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/OP4I_Error__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Error__c</fullName>
    <description>BIZ-54439
This field will be populated if there’s an error in the integration to OP4I and will be updated again (cleared) if error resolved and data came through to OP4I successfully.</description>
    <label>OP4I Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>