Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order Number of the Order that created this subscription line. Used to trace amendment activity (positive/negative quantity changes and new product additions) to the originating Order.</description>
    <formula>SBQQ__OrderProduct__r.Order.OrderNumber</formula>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>