Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Original_List_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_List_Unit_Price__c</fullName>
    <description>Twin Field for  Original List Unit Price from Quote Line .Created as part of BIZ-47578</description>
    <label>Original List Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>