Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Original_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created w.r.t BIZ-68888</description>
    <label>Original Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>