Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Originating_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Originating_Deal_ID__c</fullName>
    <label>Originating Deal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>