Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Parent_Of_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Parent_Of_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Twin field, enabled true for Select and Static Bundle Parent SKU&apos;s</description>
    <label>Parent Of Bundle</label>
    <type>Checkbox</type>
</CustomField>