Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Per_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Per_Integrations__c</fullName>
    <description>Built according to BIZ-47359</description>
    <label>Meter Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meter_Types</valueSetName>
    </valueSet>
</CustomField>