Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Family_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Value__c</fullName>
    <description>BIZ-45090</description>
    <label>Product Family Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>