Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <label>Related Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>