Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Retainer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Amount__c</fullName>
    <description>built according to BIZ-47359</description>
    <label>Retainer Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>