Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Retrigger_OP4I_Sync__c.field-meta.xml
<CustomField>
    <fullName>Retrigger_OP4I_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-78410 - Used to manually re-trigger the Salesforce Subscription to OP4I Contract sync without modifying fields that normally trigger the integration</description>
    <label>Retrigger OP4I Sync</label>
    <type>Checkbox</type>
</CustomField>