Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Revenue_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Allocation__c</fullName>
    <description>Percentage used to allocate revenue to individual components based on the overall segmented bundle price. It is twinned from new quote line and will be twinned to renewed quote line after renewal.</description>
    <label>Revenue Allocation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>