Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Segment_Months__c.field-meta.xml
<CustomField>
    <fullName>Segment_Months__c</fullName>
    <formula>IF(DAY(SBQQ__SegmentEndDate__c) &lt; DAY(SBQQ__SegmentStartDate__c),
(MONTH(SBQQ__SegmentEndDate__c)) + (12*(YEAR(SBQQ__SegmentEndDate__c)-(YEAR(SBQQ__SegmentStartDate__c)))) -
(MONTH(SBQQ__SegmentStartDate__c)),
(MONTH(SBQQ__SegmentEndDate__c)) + (12*(YEAR(SBQQ__SegmentEndDate__c)-YEAR(SBQQ__SegmentStartDate__c))) -
MONTH(SBQQ__SegmentStartDate__c) + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>