Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Sync_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to force push of Salesforce record to NetSuite via Boomi integration</description>
    <label>Sync NetSuite</label>
    <type>Checkbox</type>
</CustomField>