Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Sync_OP4i__c.field-meta.xml
<CustomField>
    <fullName>Sync_OP4i__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trigger to send subscription data to OP4i</description>
    <label>DO NOT USE Sync OP4i</label>
    <type>Checkbox</type>
</CustomField>