Doc/force-app/main/default/objects/SBQQ__Subscription__c/fields/Uplifted_Renewal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Uplifted_Renewal_Amount__c</fullName>
    <label>Uplifted Renewal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>